--- a/Prac01/Config/DefaultEngine.ini
+++ b/Prac01/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/MyMap.MyMap
-GameDefaultMap=/Game/StarterContent/Maps/MyMap.MyMap
-GlobalDefaultGameMode="/Script/Prac01.Prac01GameMode"
+EditorStartupMap=/Game/MyMap.MyMap
+GameDefaultMap=/Game/MyMap.MyMap
+GlobalDefaultGameMode=/Script/Prac01.Prac01GameMode
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
