--- a/Prac01/Prac01.uproject
+++ b/Prac01/Prac01.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "Prac01",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
